--- a/www/TEST/google-maps/maps-01.html
+++ b/www/TEST/google-maps/maps-01.html
@@ -9,6 +9,8 @@
 	<link rel="stylesheet" href="styles.css"> 
 </head>
 <body>
+<h1>Google maps GEOlocation implementatie.</h1>
+	<p>https://developers.google.com/maps/documentation/geocoding/start?hl=en_GB</p>
 
 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2462.547804720983!2d4.4664606161390115!3d51.88746637969949!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c434791c6d7919%3A0x27959f970608a3c7!2sSperwerstraat+2B%2C+3082+ME+Rotterdam!5e0!3m2!1snl!2snl!4v1515595819124" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
 </body>
